--- a/build.gradle
+++ b/build.gradle
@@ -104,4 +104,21 @@ task dropDockerImage(type:Exec) {
     commandLine 'docker',  'rmi',  "vinodreddyvrr/java-j2ee:latest"
 
 }
+task publishDocker(dependsOn: [pushDockerVersionTagged, pushDockerLatest]) {
+    doLast {
+        println 'Published'
+    }
+}
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs = [
+            '-Amapstruct.suppressGeneratorTimestamp=true'
+    ]
+}
+
+processResources {
+    filter(ReplaceTokens, tokens:[
+            'build.version' : projectVersion,
+            'build.number' : (System.getenv("BUILD_NUMBER") ?: "IDE")
+    ])
+}
