--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,8 @@ buildscript {
     repositories {
         jcenter()
     }
-
     dependencies {
-         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
-         classpath 'se.transmode.gradle:gradle-docker:1.2'
+        classpath 'com.bmuschko:gradle-docker-plugin:3.0.7'
     }
 }
 
