--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ configurations {
 docker {
   url = 'unix:///var/run/docker.sock'
 }
+repositories {
+    mavenCentral()
+}
 
 dependencies {
     providedCompile group: 'javax', name: 'javaee-api', version:'7.0'
